--- a/oz_pro/templates/welcome.html
+++ b/oz_pro/templates/welcome.html
@@ -164,7 +164,7 @@
                 <button type="button" class="btn-close btn-light" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form method="POST" action="{% url 'login' %}">
+                <form method="POST" action="{% url 'agent_login' %}">
                     {% csrf_token %}
                     <div class="mb-3">
                         <label for="agentUsername" class="form-label">Username:</label>
