FEW DESIGN ADDJESTMENT

--- a/oz_pro/templates/home1.html
+++ b/oz_pro/templates/home1.html
@@ -42,6 +42,7 @@
     {% load static %}
 
     <div>
+    <h2>Welcome {{user.username}}</h2>
     <h1>Leads</h1>
     </div>
     <!-- Leads Table -->
@@ -81,9 +82,7 @@
     {% endblock %}
 
     <!-- Footer -->
-    <footer>
-        <p>&copy; 2023 OZ Pro</p>
-    </footer>
+    
 
 </body>
 
