--- a/oz_pro/templates/base.html
+++ b/oz_pro/templates/base.html
@@ -1,5 +1,4 @@
-
-
+{% load static %}
 <!-- base.html -->
 <!DOCTYPE html>
 <html lang="en">
@@ -18,7 +17,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 1rem 2rem;
-            background-color: #333;
+            background-color: #1E4620;
         }
 
         nav a {
@@ -39,6 +38,16 @@
             border-radius: 5px;
             cursor: pointer;
         }
+
+        footer {
+            position: relative;
+            width: 100%;
+            background-color: #1E4620;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 500px;
+        }
     </style>
 </head>
 
@@ -47,7 +56,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">OZ PRODUCTION </a>
+            <a class="navbar-brand" href="#"><img src="{% static 'pics/Picture4.png' %}" alt="My image" class="small-image" />  </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -81,7 +90,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+<footer>
+    &copy; 2023 OZ-Production <img src="{% static 'pics/Picture4.png' %}" alt="My image" class="small-image" />
+</footer>
 </body>
 
 </html>
