--- a/oz_pro/templates/welcome.html
+++ b/oz_pro/templates/welcome.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -144,11 +145,19 @@
                 transform: translateX(-50%) translateY(-15px);
             }
         }
+
+        /* make the images in size that will fit in the table */
+        .small-image {
+            width: 686px;
+            height: auto;
+            margin-bottom: 50px
+        }
     </style>
 </head>
 <body>
-    <div class="welcome-section">
-        <h1>Welcome to OZ-Production</h1>
+    
+    <div class="welcome-section">        
+        <img src="{% static 'pics/Picture4.png' %}" alt="My image" class="small-image" />
         <div class="login">
             <input type="submit" value="Login for agent" onclick="openAgentLoginPopup()">
         </div>
