--- a/oz_pro/templates/base.html
+++ b/oz_pro/templates/base.html
@@ -76,7 +76,11 @@
                     </li>
                 </ul>
                 <!-- Logout Button -->
-                <button class="btn btn-danger my-2 my-sm-0" type="submit">Logout</button>
+                <form method="post" action="{% url 'agent_logout' %}">
+                    {% csrf_token %}
+                    <button class="btn btn-danger my-2 my-sm-0" type="submit">Logout</button>
+                </form>
+                {% comment %} <button class="btn btn-danger my-2 my-sm-0" type="submit" onclick="{% url 'agent_logout' %}">Logout</button> {% endcomment %}
             </div>
         </div>
     </nav>
