--- a/oz_pro/templates/welcome.html
+++ b/oz_pro/templates/welcome.html
@@ -165,6 +165,7 @@
         <div class="arrow" id="scroll-arrow">&darr;</div>
     </div>
    <!-- Agent Login Modal -->
+   {% if not user.is_authenticated %}
 <div class="modal fade" id="agentLoginModal" tabindex="-1" aria-labelledby="agentLoginModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content" style="background-color: #1E4620; color: #fff;">
@@ -173,6 +174,7 @@
                 <button type="button" class="btn-close btn-light" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
+                
                 <form method="POST" action="{% url 'agent_login' %}">
                     {% csrf_token %}
                     <div class="mb-3">
@@ -188,6 +190,7 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 <button type="submit" class="btn btn-success">Log in</button></form>
+                {% endif %}
             </div>
         </div>
     </div>
