--- a/oz_pro/templates/home1.html
+++ b/oz_pro/templates/home1.html
@@ -72,8 +72,9 @@
                 <td>{{ lead.date_of_creation }}</td>
 
                 <td>
-                    <button class="btn btn-danger btn-sm" onclick="window.location.href='{% url 'delete_lead' lead.ID %}'">Delete</button>
-                    <button class="btn" for="btn-check-4" onclick="toggleHighlight({{ lead.ID }})">Highlight</button>
+                    <img src="{% static 'pics/CROPED_DELETE.png' %}" alt="Delete" class="small-image" style="cursor:pointer" onclick="window.location.href='{% url 'delete_lead' lead.ID %}'">
+                     <button class="btn" for="btn-check-4" onclick="toggleHighlight({{ lead.ID }})">Highlight</button>
+
                 </td>
             </tr>
             {% endfor %}
