--- a/oz_pro/templates/base.html
+++ b/oz_pro/templates/base.html
@@ -30,15 +30,6 @@
             text-decoration: underline;
         }
 
-        button#logout {
-            background-color: red;
-            color: white;
-            padding: 0.5rem 1rem;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
         footer {
             position: relative;
             width: 100%;
@@ -93,6 +84,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    {% comment %} TODO: check if the abive links are needed {% endcomment %}
 <footer>
     &copy; 2023 OZ-Production <img src="{% static 'pics/Picture4.png' %}" alt="My image" class="small-image" />
 </footer>
