--- a/oz_pro/templates/home1.html
+++ b/oz_pro/templates/home1.html
@@ -67,7 +67,7 @@
                 <td>{{ lead.ID }}</td>
                 <td>{{ lead.name }}</td>
                 <td>{{ lead.phone_number }}</td>
-                <td>{{ lead.event_type_and_details }}</td>
+                <td>{{ lead.event_type }}</td>
                 <td>{{ lead.event_date }}</td>
                 <td>{{ lead.date_of_creation }}</td>
 
