--- a/oz_pro/templates/base.html
+++ b/oz_pro/templates/base.html
@@ -57,13 +57,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Leads</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Customers</a>
+                        <a class="nav-link" href="customers.html">Customers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Events</a>
+                        <a class="nav-link" href="events">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Service Packages</a>
+                        <a class="nav-link" href="services.html">Service Packages</a>
                     </li>
                 </ul>
                 <!-- Logout Button -->
