--- a/oz_pro/templates/base.html
+++ b/oz_pro/templates/base.html
@@ -39,31 +39,73 @@
             padding: 10px 0;
             margin-top: 500px;
         }
+
+        /* make the images in size that will fit in the table */
+        .small-image {
+            width: 50px;
+            height: auto;
+        }
+
+        
+        .smaller-image {
+            width: 40px;
+            height: auto;
+        }
+
+                {% comment %}make an container to center the plus sign image link  {% endcomment %}
+        .image-container {
+            display: flex;
+            justify-content: center; /* center horizontally */
+            align-items: center;     /* center vertically */
+            height: 100%; /* or specify another height */
+        }
+
+        .add-image {
+            width: 150px;
+            height: auto;
+            
+        }
+        @keyframes pop {
+            0%, 100% {
+                transform: scale(1); /* start and end at original size */
+            }
+            50% {
+                transform: scale(1.5); /* scale 1.5 times in the middle of the animation */
+            }
+        }
+        
+        .animate-pop {
+            animation: pop 0.5s; /* apply the 'pop' animation over a duration of 0.5 seconds */
+        }
+        
+
     </style>
+ 
 </head>
 
 <body>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="{% static 'pics/Picture4.png' %}" alt="My image" class="small-image" />  </a>
+
+            <a class="navbar-brand"><img src="{% static 'pics/Picture4.png' %}" alt="My image" class="small-image" onclick="toggleAnimation(this)">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mr-auto">  <!-- Added 'mr-auto' for alignment -->
+                <ul class="navbar-nav mr-auto">  
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Leads</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'all_leads' %}">Leads</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="customers.html">Customers</a>
+                        <a class="nav-link" href="{% url 'all_customers' %}">Customers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="events">Events</a>
+                        <a class="nav-link" href="{% url 'all_events' %}">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="services.html">Service Packages</a>
+                        <a class="nav-link" href="{% url 'all_service_packages' %}">Service Packages</a>
                     </li>
                 </ul>
                 <!-- Logout Button -->
@@ -77,7 +119,7 @@
 
     <!-- Main content block. This will be overridden in child templates -->
     <div class="container mt-5">
-        {% block content %} {% endblock %}
+        {% block content %}{% endblock %}
     </div>
 
     <!-- Bootstrap JS, Popper.js -->
@@ -88,6 +130,18 @@
 <footer>
     &copy; 2023 OZ-Production <img src="{% static 'pics/Picture4.png' %}" alt="My image" class="small-image" />
 </footer>
+<script>
+
+function toggleAnimation(imgElement) {
+    imgElement.classList.add("animate-pop");
+
+    // Remove the class after the animation completes
+    setTimeout(() => {
+        imgElement.classList.remove("animate-pop");
+    }, 500); // 500ms corresponds to the animation duration
+}
+</script>
+
 </body>
 
 </html>
