--- a/oz_pro/templates/leads.html
+++ b/oz_pro/templates/leads.html
@@ -6,20 +6,9 @@
     
     <meta charset="UTF-8">
 
-    <!-- Add Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leads/Home Page</title>
-    
-    <style>
-        
-    /* make the images in size that will fit in the table */
-    .small-image {
-        width: 50px;
-        height: auto;
-    }
-    </style>
-
+  
     <script>
     
         function toggleHighlight(leadId) {
@@ -56,7 +45,7 @@
                 <th>Event type and details</th>
                 <th>Event date</th>
                 <th>Date of creation</th>
-                <th>Action</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -82,7 +71,7 @@
     </table>
     {% endblock %}
 
-    <!-- Footer -->
+
     
 
 </body>
