--- a/oz_pro/templates/customers.html
+++ b/oz_pro/templates/customers.html
@@ -1,34 +1,74 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customers Page</title>
-    <script>
+    <title>Customers</title>
     
-        function toggleHighlight(checkboxElem, customerId) {
-            var row = document.getElementById("customer_" + customerId);
-            if (checkboxElem.checked) {
-                row.style.backgroundColor = "yellow";
-            } else {
-                row.style.backgroundColor = ""; // reset the background color
-            }
-        }
-        
-      
-            
-    </script>
+
 </head>
 <body>
-{% extends 'base.html' %}
-{% block content %}
-{% load static %}
+    {% extends 'base.html' %}
+    {% block add_button %}
+    {% load static %}
 
-    <div>
-    <h2>Welcome {{user.username}}</h2>
-    <h1>Customers</h1>
+    <div class="image-container">
+        <a data-bs-toggle="tooltip" title="ADD CUSTOMER">
+            <img src="{% static 'pics/ADD.png' %}" alt="Add" class="small-image-rotate" style="cursor:pointer" data-bs-toggle="modal" data-bs-target="#addCustomerModal">
+        </a>
     </div>
+
+        <div class="modal fade" id="addCustomerModal" tabindex="-1" aria-labelledby="addCustomerModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content" style="background-color: #1E4620; color: #fff;">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="addCustomerModalLabel">Customer Details: </h5>
+                        
+                        <button class="custom-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+                    </div>
+                    <div class="modal-body">
+                        
+                        <form method="POST" action="{% url 'add_customer'%}">
+                            {% csrf_token %}
+
+                            <div class="mb-3">
+                                <label for="customerID" class="form-label">Customer ID:</label>
+                                <input type="text" class="form-control" id="customerID" name="addID">
+                            </div>
+                            <div class="mb-3">
+                                <label for="customerName" class="form-label">Customer Name:</label>
+                                <input type="text" class="form-control" id="customerName" name="addName">
+                            </div>
+                            <div class="mb-3">
+                                <label for="customerTel" class="form-label">Phone Number:</label>
+                                <input type="text" class="form-control" id="customerTel" name="addTel">
+                            </div>
+                            <div class="mb-3">
+                                <label for="customerType" class="form-label">Customer Type:</label>
+                                <input type="text" class="form-control" id="customerType" name="addType">
+                            </div>
+                      
+                           
+                        
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-success">Add</button></form>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    {% endblock %}
+    
+    {% block content %}
+    {% load static %}
+    <div>
+    <h1>Customers Table:</h1>
+    </div>
+
     <!-- customers Table -->
     <table class="table table-hover">
         <thead>
@@ -43,28 +83,74 @@
                 <th>Actions</th>
             </tr>
         </thead>
+
         <tbody>
             {% for customer in customers %}
             
             <tr id="customer_{{ customer.ID }}">
                 <td><input type="checkbox" onchange="toggleHighlight(this, {{ customer.ID }})" title="Highlight"></td>
-                <td><img src="{% static 'pics/' %}{{customer.image}}" alt="My image" class="small-image" /></td>
+                <td><img src="{% static 'pics/' %}{{customer.image}}" alt="Customer image" class="small-image" /></td>
                 <td>{{ customer.ID }}</td>
                 <td>{{ customer.name }}</td>
                 <td>{{ customer.phone_number }}</td>
-                <td>{{ customer.type }}</td>
+                <td>{{ customer.customer_type }}</td>
                 <td>{{ customer.date_of_creation }}</td>
 
                 <td>
-                     <img src="{% static 'pics/edit.png' %}" alt="Delete" class="smaller-image" style="cursor:pointer"> {% comment %} TODO: add on click {% endcomment %}
-                     
+                    <a data-bs-toggle="tooltip" title="UPDATE CUSTOMER">
+                        <img src="{% static 'pics/edit.png' %}" alt="Update" class="smaller-image" style="cursor:pointer" data-bs-toggle="modal" data-bs-target="#updateCustomerModal_{{ customer.ID }}">
+                    </a>
                 </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+                     <div class="modal fade" id="updateCustomerModal_{{ customer.ID }}" tabindex="-1" aria-labelledby="updateCustomerModalLabel_{{ customer.ID }}" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content" style="background-color: #1E4620; color: #fff;">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="updateCustomerModalLabel_{{ customer.ID }}">Update Customer:<br>(Leave blnak the ones you dont want to change!) </h5>
+                                    
+                                    <button class="custom-close" data-bs-dismiss="modal" aria-label="Close"></button>
 
+                                </div>
+                                <div class="modal-body">
+                                    
+                                    <form method="POST" action="{% url 'update_customer' customer.ID %}">
+                                        {% csrf_token %}
+                                        <div class="mb-3">
+                                            <label for="customerTel" class="form-label">Phone Number:</label>
+                                            <input type="text" class="form-control" id="customerTel" name="updateTel">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="customerType" class="form-label">Customer Type:</label>
+                                            <input type="text" class="form-control" id="customerType" name="updateType">
+                                        </div>
+                                    
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="submit" class="btn btn-success">Update</button></form>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+         </tr>
+            {% endfor %}
+      </tbody>
+    </table>  
+
+    <script>
+
+        function toggleHighlight(checkboxElem, customerId) {
+            var row = document.getElementById("customer_" + customerId);
+            if (checkboxElem.checked) {
+                row.style.backgroundColor = "yellow";
+            } else {
+                row.style.backgroundColor = ""; // reset the background color
+            }
+            }
+
+    </script>
 {% endblock %}
-    
+
+   
 </body>
 </html>
